# ncn-cookbook

./: .gitignore  Cargo.toml  README.md  cache.json  config.json  package.json
assets/: collection.json
code/restaking/: Cargo.toml
code/restaking/src/: main.rs
code/vault/: Cargo.toml
code/vault/src/: main.rs
docs/: README.md
docs/.vuepress/: config.js
docs/.vuepress/.temp/docsearch/: config.js
docs/.vuepress/.temp/internal/: clientConfigs.js  routes.js  siteData.js  themeData.js
docs/.vuepress/.temp/markdown-tab/: config.js
docs/.vuepress/.temp/pages/: 404.html.js  index.html.js  index.html.vue
docs/.vuepress/.temp/pages/building-ncn/: core-logic.html.js  core-logic.html.vue  design.html.js  ncn-design.html.js  ncn-design.html.vue  node-operator-client.html.js  node-operator-client.html.vue  (+8 more)
docs/.vuepress/.temp/prismjs/: config.js
docs/.vuepress/configs/navbar/: en.js
docs/.vuepress/configs/sidebar/: en.js
docs/building-ncn/: core-logic.md  node-operator-client.md  permissionless-cranker.md  pricing.md  snapshot.md
docs/core-concepts/: ncn.md  operator.md  overview.md  vault.md
docs/developer-resources/: developer-resources.md
docs/getting-started/: cli.md  getting-started.md  installation.md  rust-client.md
docs/guide/: getting-started.md  introduction.md  ncn-design.md  restaking-program.md  vault-program.md
docs/integrating-with-jito-restaking/: restaking-program.md  vault-program.md
docs/introduction/: introduction.md  jito-restaking.md  ncn-overview.md
docs/references/: jito-tip-router.md  overview.md
src/: index.ts
(+51 files in other folders)
