[workspace]
members = [
    "code/*"
]

resolver = "2"

[workspace.dependencies]
jito-restaking-client = { git = "https://github.com/jito-foundation/restaking.git", branch = "master" }
jito-restaking-core = { git = "https://github.com/jito-foundation/restaking.git", branch = "master" }
jito-vault-client = { git = "https://github.com/jito-foundation/restaking.git", branch = "master" }
jito-vault-core = { git = "https://github.com/jito-foundation/restaking.git", branch = "master" }
solana-sdk = "~1.18"
solana-rpc-client = "~1.18"
solana-rpc-client-api = "~1.18"
tokio = { version = "1.36.0", features = ["full"] }
